--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -42,6 +42,15 @@
     }
   }
 
+  &--green {
+    background-color: $color-primary;
+    color: $color-white;
+
+    &::after {
+      background-color: $color-primary;
+    }
+  }
+
   /* after psuedo element */
   &::after {
     /* have to specify even if empty */
