--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -16,6 +16,12 @@
   -webkit-clip-path: polygon(0 0, 100% 0%, 100% 75vh, 0 100%);
   /* The coordinates to create a polygon shape that will remain visible (moves clockwise starting top left) numbers are in view height*/
   clip-path: polygon(0 0, 100% 0%, 100% 75vh, 0 100%);
+
+  @include respond(phone) {
+    -webkit-clip-path: polygon(0 0, 100% 0%, 100% 85vh, 0 100%);
+    /* The coordinates to create a polygon shape that will remain visible (moves clockwise starting top left) numbers are in view height*/
+    clip-path: polygon(0 0, 100% 0%, 100% 85vh, 0 100%);
+  }
   // nested: "copies" the parent selector
   &__logo-box {
     position: absolute;
